--- a/package.json
+++ b/package.json
@@ -30,33 +30,31 @@
   },
   "homepage": "https://github.com/IdentityModel/oidc-client-js",
   "dependencies": {
-    "uuid": "^3.3.2",
-    "core-js": "^2.6.4",
+    "base64-js": "^1.3.0",
+    "core-js": "^3.6.5",
     "crypto-js": "^3.1.9-1",
-    "base64-js": "^1.3.0"
+    "fsevents": "^2.1.3",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "babel-core": "^6.7.2",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-transform-es2015-classes": "^6.7.7",
-    "babel-polyfill": "^6.9.1",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-register": "^6.7.2",
+    "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/register": "^7.8.4",
+    "babel-loader": "^8.0.6",
     "chai": "^4.2.0",
     "express": "^4.16.4",
     "gulp": "^4.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-rename": "^1.4.0",
     "jsbn": "^1.1.0",
-    "jsrsasign": "^8.0.12",
+    "jsrsasign": "^8.0.15",
     "mocha": "^5.2.0",
     "natives": "^1.1.6",
     "open": "^6.1.0",
-    "uglifyjs-webpack-plugin": "^1.3.0",
+    "terser-webpack-plugin": "^2.3.4",
     "vinyl-source-stream": "^2.0.0",
-    "webpack": "^4.29.6",
-    "webpack-stream": "^4.0.3"
+    "webpack": "^4.41.5",
+    "webpack-stream": "^5.2.1"
   },
   "typings": "index.d.ts"
 }
